No postprocessing in menu
ffmpeg debug: postprocessing disabled
ffmpeg debug: postprocessing disabled
changed title from No postprocessing in Win32 to No postprocessing in menu
added Component::Interface: other plugins Severity::minor labels
changed milestone to %0.8.6 maintenance
(In [16503]) Fix postprocessing in menu (Closes:#659 (closed))
added Status::fixed label
closed
VideoLAN code repository instance