Fix postprocessing in menu (Closes:#659)