modules/gui/wxwidgets/menus.cpp
@@ -174,6 +174,7 @@ int VideoAutoMenuBuilder( vlc_object_t *p_object, vector<int> &ri_objects,
                                                  FIND_PARENT );
     if( p_dec_obj != NULL )
     {
+        vlc_object_t *p_object = p_dec_obj;
         PUSH_VAR( "ffmpeg-pp-q" );
         vlc_object_release( p_dec_obj );
     }
